src/styles.scss
@import '~@angular/material/theming';
@include mat-core();

/* Weatherman color theme */
$weatherman-primary: mat-palette($mat-indigo, 700);
$weatherman-accent: mat-palette($mat-blue-grey, 900);
$weatherman-theme: mat-light-theme(
  (
    color: (
      primary: $weatherman-primary,
      accent: $weatherman-accent,
    ),
  )
);
@include angular-material-theme($weatherman-theme);

.primary-color {
  color: mat-color($weatherman-primary);
}

.accent-color {
  color: mat-color($weatherman-accent);
}

html,
body {
  height: 100%;
}

body {
  margin: 0;
  font-family: Roboto, 'Helvetica Neue', sans-serif;
  background-color: #fcfcfc;
}

img {
  transform: scale(2.5, 2.5);
  -ms-transform: scale(2.5, 2.5);
  -webkit-transform: scale(2.5, 2.5);
  margin-left: 20px;
}

button {
  border-radius: 6px;
}

.vertical-margin {
  margin-top: 16px;
  margin-bottom: 16px;
}

.no-vertical-margin {
  margin-top: 0;
  margin-bottom: 0;
}

.right {
  text-align: right;
}

.smaller {
  font-size: 80%;
}

.overlined {
  border-top: 1px solid mat-color($weatherman-accent, 600);
  padding-top: 8px;
}

.oblique {
  font-style: oblique;
}

.super {
  vertical-align: super;
}

.title-banner {
  font-size: 42px;
}

mat-toolbar button {
  cursor: pointer;
  font-size: 15px;
  margin-left: 15px;
  padding: 2px 4px;
}

mat-toolbar.lower {
  font-size: 16px;
  font-weight: lighter;
  font-style: oblique;
}

.mat-caption {
  font-size: 16px;
  font-weight: lighter;
}

mat-card-header {
  padding: 0;
}

form {
  margin: 30px 0;
}

mat-hint span {
  font-size: 14px;
  padding: 5px;
}

